Bug 1875629 - Add AXContents to outer docs (scroll areas). r=morgan

Without this attribute VoiceOver gets into an unstable state when the cursor or focus
leaves the document.

Differential Revision: https://phabricator.services.mozilla.com/D211617